# romar

./: LICENSE  README.md  pyproject.toml  requirements.txt
conda/: env.yml
examples/: README(1).md  README.md
examples/database/: .gitignore
examples/inputs/: allrun.sh  jobscript.sh  paths.json
examples/inputs2/: allrun.sh
examples/inputs_02/: jobscript.sh  paths.json
examples/inputs_r04/: allrun.sh
examples/postproc/: .gitignore  1d_shock_steady.ipynb  jacobian.ipynb  memory.ipynb  shock_steady.ipynb  testing.ipynb  varimax.ipynb  varimax_old.ipynb  visual_basis.ipynb
examples_new/database/: .gitignore
romar/: __init__.py  backend.py  const.py  data.py  env.py  utils.py
romar_new/: data.py  utils.py
romar_old/: __init__.py
scripts/: build_rom.py  eval_rom_acc.py  gen_data_test.py  gen_data_train.py  gen_input_files.py  visual_rom.py
test/: basic.py  cobras_bases.p  grad_adj_m2.txt  grad_adj_m3.txt  grad_fd.txt  pod_bases.p  rom_mask.txt  test_ad copy.ipynb  test_ad.ipynb  test_ad_norm.ipynb  test_adj.ipynb  test_cobras.ipynb  test_cobras_new.ipynb  test_cobras_visual copy.ipynb  test_cobras_visual.ipynb  test_iso.ipynb  test_iso_norm.ipynb  test_jac.ipynb  test_read_sol.ipynb  test_rhs_plato.ipynb  test_rom_plato.ipynb  test_run.ipynb  varimax.ipynb
trash/: argoncr_molar.py  basic.py  build_rom_old.py  cobras.py  cobras_new.py  cobras_old.py  eval_rom_acc copy.py  lin_cobras copy.py  pca_old.py  pca_old_1.py  pca_old_2.py  test copy.ipynb  test_iso_old.ipynb
trash_old/: box_ad_old.py  build_rom_old2.py  cobras copy.py  radiation_old.py  test.ipynb  test_ad_old.ipynb  test_iso copy 2.ipynb  test_iso_doped.ipynb  test_old.ipynb
(+331 files in other folders)
